--- a/.ENV
+++ b/.ENV
@@ -1,3 +1,4 @@
 PORT=8000
 DB="mongodb+srv://harshityadav:JxsV3y4V7mWl8g1I@cluster0.s9trpdc.mongodb.net/ExpanseTracker"
 JWT="H8ydv#9999"
+SECRET="h8ydvExpenseTrackerSecretKey"
