--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-redis": "^7.1.0",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.4.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "redis": "^4.6.7"
+  },
+  "scripts": {
+    "start": "nodemon server.mjs"
   }
 }
