--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "bcrypt": "^5.1.0",
     "connect-redis": "^7.1.0",
     "cookie-session": "^2.0.0",
-    "csurf": "^1.11.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.0",
