--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,8 @@
 {
-    "version": 1,
-    "builds": [
+    "rewrites": [
         {
-            "src": "./server.mjs",
-            "use": "@vercel/node"
+            "source": "/(.*)",
+            "destination": "/"
         }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
-    ],
-    "installCommand": "npm install"
+    ]
 }
