config fixed for deployment

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-rate-limit": "^6.8.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
@@ -19,6 +20,9 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "uuid": "^9.0.0"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   },
   "scripts": {
     "start": "node index.js",
